additional input styles. Buttons, and radio and checkboxes

--- a/guidelines/_posts/2014-01-05-input.md
+++ b/guidelines/_posts/2014-01-05-input.md
@@ -2,7 +2,7 @@
 layout: page
 categories: guidelines
 title: Input Styles
-permalink: guidelines/input
+permalink: /guidelines/input
 ---
 <h1>Input Styles</h1>
 
