--- a/guidelines/_posts/2014-01-10-visual.md
+++ b/guidelines/_posts/2014-01-10-visual.md
@@ -2,7 +2,7 @@
 layout: page
 categories: guidelines
 title: UI Elements
-permalink: guidelines/visual-ui
+permalink: /guidelines/visual-ui
 ---
 <h1>UI Elements</h1>
 
