--- a/guidelines/_posts/2014-01-11-Colors.md
+++ b/guidelines/_posts/2014-01-11-Colors.md
@@ -2,7 +2,7 @@
 layout: page
 categories: guidelines
 title: Colors
-permalink: guidelines/colors
+permalink: /guidelines/colors
 ---
 
 <h1>Brand Colors</h1>
