--- a/guidelines/_posts/2014-01-06-buttons.md
+++ b/guidelines/_posts/2014-01-06-buttons.md
@@ -78,7 +78,7 @@ permalink: /guidelines/buttons
 		<div class="radio">  
 			<ul class="radio-group">
 				<li>
-					<input id="standard" type="radio" name="gender" value="female"><label class="radio" for="standard">Standard (5–7 business days)  <span style="color:#bebebe;"><strike>$7.95</strike></span> <span id="freecall"><strong>FREE!</strong></span></label>
+					<input id="standard" type="radio" name="gender" value="female"><label class="radio" for="standard">Standard (5–7 business days)  <span style="color:#bebebe;"><strike>$7.95</strike></span> <span id="freecall">FREE!</span></label>
 				</li>
 				<li>
 					<input id="express" type="radio" name="gender" value="female"><label class="radio" for="express">Express (2–3 business days) $10.00</label>
@@ -102,13 +102,6 @@ permalink: /guidelines/buttons
 						<input id="check1" type="checkbox" name="gender" value="female"><label class="checkbox" for="check1">Yes, sign me up for Free People email news, offers and other promotional communications.</label>
 					</li>
 				</ul>
-				<pre>
-					<code>&lt;input id="id name" type="checkbox"&gt;
-						&lt;label for="id name"&gt;
-						Label Text Goes Here
-						&lt;/label&gt;		
-					</code>
-				</pre>
 			</div>  
 		</ul>
 	</div>
