--- a/guidelines/_posts/2014-01-06-buttons.md
+++ b/guidelines/_posts/2014-01-06-buttons.md
@@ -1,17 +1,17 @@
 ---
-layout: page
+layout: guidelines
 categories: guidelines
 title: Input Styles
 permalink: /guidelines/buttons
 ---
 <div class="row">
-	<div class="large-10 small-centered columns">
+	<div class="large-12 small-centered columns">
 		<h1>Input Styles</h1>
 	</div>
 </div>
 
 <div class="row">
-	<div class="large-10 small-centered columns">
+	<div class="large-12 small-centered columns">
 		<h2>Primary Button Style</h2>
 		<ul class="btn-group">
 			<li><button>Regular Button Style</button></li>
@@ -21,7 +21,7 @@ permalink: /guidelines/buttons
 </div>
 
 <div class="row">
-	<div class="large-10 small-centered columns">
+	<div class="large-12 small-centered columns">
 		<h2>Secondary Button Style</h2>
 		<ul class="btn-group">
 			<li><button class="secondary">Secondary Button Style</button></li>
@@ -31,7 +31,7 @@ permalink: /guidelines/buttons
 </div>
 
 <div class="row">
-	<div class="large-10 small-centered columns">
+	<div class="large-12 small-centered columns">
 		<h2>Tertiary Button Style</h2>
 		<ul class="btn-group">
 			<li><button class="tertiary">Tertiary Button Style</button></li>
@@ -41,7 +41,7 @@ permalink: /guidelines/buttons
 </div>
 
 <div class="row">
-	<div class="large-10 small-centered columns">
+	<div class="large-12 small-centered columns">
 		<ul class="btn-group">
 			<h2>Text Input</h2>
 			<div class="large-6 columns">
@@ -57,7 +57,7 @@ permalink: /guidelines/buttons
 </div>
 
 <div class="row">
-	<div class="large-10 small-centered columns">
+	<div class="large-12 small-centered columns">
 		<h2>Dropdown Input</h2>
 		<form class="dropdown">
 			<select>
@@ -73,7 +73,7 @@ permalink: /guidelines/buttons
 </div>
 
 <div class="row">
-	<div class="large-10 small-centered columns">
+	<div class="large-12 small-centered columns">
 		<h2>Radio Input</h2>
 		<div class="radio">  
 			<ul class="radio-group">
@@ -93,7 +93,7 @@ permalink: /guidelines/buttons
 
 
 <div class="row">
-	<div class="large-10 small-centered columns">
+	<div class="large-12 small-centered columns">
 		<ul class="btn-group">
 			<h2>Checkbox Input</h2>
 			<div class="checkbox">  
