--- a/guidelines/_posts/2014-01-06-buttons.md
+++ b/guidelines/_posts/2014-01-06-buttons.md
@@ -44,7 +44,7 @@ permalink: /guidelines/buttons
 	<div class="large-12 small-centered columns">
 		<ul class="btn-group">
 			<h2>Text Input</h2>
-			<div class="large-6 columns">
+			<div class="large-4 small-12 columns">
 				<form>
 					<label for="address">Address:</label><br>
 					<input type="text" id="address" name="address" placeholder="Street address, P.O. box, Company name, C/O">
@@ -57,7 +57,7 @@ permalink: /guidelines/buttons
 </div>
 
 <div class="row">
-	<div class="large-12 small-centered columns">
+	<div class="large-4 small-12 columns">
 		<h2>Dropdown Input</h2>
 		<form class="dropdown">
 			<select>
